; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/extr_posix_sema.c_PGSemaphoreLock.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/extr_posix_sema.c_PGSemaphoreLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@EINTR = common dso_local global i64 0, align 8
@FATAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"sem_wait failed: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PGSemaphoreLock(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br label %4

4:                                                ; preds = %15, %1
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @PG_SEM_REF(i32 %5)
  %7 = call i32 @sem_wait(i32 %6)
  store i32 %7, i32* %3, align 4
  br label %8

8:                                                ; preds = %4
  %9 = load i32, i32* %3, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = load i64, i64* @errno, align 8
  %13 = load i64, i64* @EINTR, align 8
  %14 = icmp eq i64 %12, %13
  br label %15

15:                                               ; preds = %11, %8
  %16 = phi i1 [ false, %8 ], [ %14, %11 ]
  br i1 %16, label %4, label %17

17:                                               ; preds = %15
  %18 = load i32, i32* %3, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32, i32* @FATAL, align 4
  %22 = call i32 @elog(i32 %21, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %23

23:                                               ; preds = %20, %17
  ret void
}

declare dso_local i32 @sem_wait(i32) #1

declare dso_local i32 @PG_SEM_REF(i32) #1

declare dso_local i32 @elog(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
